src/test/deca/context/invalid/our_tests/jb-simple_context1.deca
// Description:
//    test simple de programme contextuellement incorrect
//
// Resultats:
//    Ligne 11: affectation interdite.
// 
// Historique:
//    cree le 12/01/2017

{
   a = 2;
}
